# liaison-RM

./: .gitignore  AGENTS.md  AI_BUILD_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  GEMINI.md  GOVERNANCE.md  MAINTAINERS.md  PROJECT_CONTEXT.md  README.md  SECURITY.md  SPEC.md  TODOS.md
.bootstrap/: auth-probe.txt
.bootstrap/current/: part-000  part-001  part-002
.bootstrap/initial-stack/: READY  part-000  part-001  part-003  part-004  part-005  part-006  part-007  part-009
.bootstrap/macos-alpha/: payload.tar.gz.b64
.bootstrap/p03/: part-00  part-01  part-02  part-03  part-04  part-05
.bootstrap/provider-payload/: READY  fix.py.gz.b64  part-00  part-01  part-02  part-03  part-04
.bootstrap/provider-repair/: READY  direct-sources.tar.gz.b64
.bootstrap/relationship/: part-00  part-01  part-02  part-03  part-04  part-05  part-06  part-07
.diagnostics/: clippy.txt
.github/: REPOSITORY_METADATA.md  copilot-instructions.md  pull_request_template.md
.github/.crm-source-v2/: part00
.github/.handdrawn-payload/: part00  part01  part02  part03  part04
.github/.p03-patch/: part00  part01  part02  part03  part04  part05  part06  part07  part08-0  part08-1  part09-0  part09-1  part10-0
.github/ISSUE_TEMPLATE/: architecture_clarification.md  bug_report.md  dx_friction.md
.github/workflows/: apply-backup-format-lock-once.yml  apply-backup-format-lock-v2-once.yml  apply-desktop-generated-assets-once.yml  apply-macos-alpha-once.yml  apply-p03-source-fixes-once.yml  apply-p03-validation-fixes.yml  apply-p03d-changelog-once.yml  apply-p04-changelog-once.yml  apply-profile-persistence-once.yml  apply-provider-clippy-fixes.yml  apply-provider-format-final.yml  apply-provider-format-once.yml  apply-provider-payload.yml  apply-provider-registry-fix-once.yml  apply-relationship-contracts-once.yml  apply-relationship-runtime-format-once.yml  backup-diagnostics.yml  backup.yml  capture-clippy-once-2.yml  capture-clippy-once-3.yml  capture-clippy-once-4.yml  capture-clippy-once-5.yml  capture-clippy-once.yml  clippy-fix-once.yml  context-diagnostics.yml  design-contract.yml  diagnose-p03-bootstrap.yml  diagnose-p03-staging.yml  diagnose-p03-validation.yml  diagnose-p03-windows.yml  export-full-delivery-worktree-once.yml  export-p03-current-worktree-once.yml  export-worktree-once.yml  finalize-p03-source-once.yml  finalize-p04-components-once.yml  finalize-p04-frontend-lock-once.yml  finalize-p04-parity-once.yml  fix-context-readme-once.yml  format-once.yml  generate-p04-lock-once.yml  (+33 more)
.planning/: PROJECT.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: vB0-REQUIREMENTS.md  vB0-ROADMAP.md
.staging/p03/: apply_corrections.py  part-00  part-00a  part-00b  part-00c  part-01  part-02  part-03  part-04
adapters/backup-local/: Cargo.toml  README.md
adapters/backup-local/src/: lib.rs
adapters/object-store-local/: Cargo.toml  README.md
adapters/object-store-local/src/: lib.rs
adapters/provider-registry-memory/: Cargo.toml  README.md
adapters/relationship-yaml/: Cargo.toml  README.md
adapters/relationship-yaml/src/: lib.rs
adapters/vault-markdown/: Cargo.toml  README.md
adapters/vault-markdown/src/: lib.rs  operations.rs  session_people.rs  write_journal.rs
adapters/vault-markdown/tests/: session_people_boundary.rs  windows_directory_sync_probe.rs
adapters/vault-markdown/tests/ui/: repository-cannot-escape-work-guard.rs  repository-cannot-escape-work-guard.stderr  repository-is-available-under-guard.rs  unbound-store-is-not-person-repository.rs  unbound-store-is-not-person-repository.stderr
adapters/workspace-session-local/: Cargo.toml  README.md
adapters/workspace-session-local/src/: identity_registry.rs  lib.rs
apps/cli/: Cargo.toml  README.md
apps/cli/src/: main.rs
apps/cli/tests/: backup_workflow.rs  cli_workflow.rs  relationship_workflow.rs
apps/desktop/: README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
contexts/connections/: Cargo.toml  README.md
contexts/customisation/: Cargo.toml  README.md
contexts/events/: Cargo.toml  (+1 more)
contexts/people/: Cargo.toml  README.md
contexts/people/src/: dietary.rs  lib.rs
contexts/profiles/: Cargo.toml  README.md
contexts/profiles/src/: lib.include  lib.new.rs  lib.rs  persistence.rs  persistence_export.rs
contexts/workspace/: Cargo.toml  README.md
contexts/workspace/src/: backup.rs  lib.rs  operations.rs
crates/liaison-application/: Cargo.toml  README.md
crates/liaison-application/src/: lib.rs
crates/liaison-application/tests/: repeated_canonical_mutations.rs  windows_operation_diagnostic.rs
crates/liaison-provider-sdk/: Cargo.toml  README.md
crates/liaison-provider-sdk/src/: lib.rs
crates/liaison-provider-sdk/tests/: wit_contract.rs
design/: semantic-tokens.v1.json
docs/: DEVELOPMENT.md  PROJECT_CONTEXT.md  README.md  STATUS.md  public-site.md  repository-metadata.md
providers/: README.md
schemas/: locale-catalog.schema.json  profile-configuration.schema.json  review-policy.schema.json  topic-pack.schema.json  workspace-manifest.schema.json
scripts/: check_architecture.py  check_component_contract.py  check_design_contract.py  check_design_tokens.py  check_desktop_shell.py  check_frontend_contract.py  check_localization.py  check_parity_routes.py  check_providers.py  check_public_site.py  check_relationship_contracts.py  check_relationship_model.py  check_relationship_persistence.py  check_repository.py  check_spec.py  check_wit_contract.py  check_workspace_manifest.py  generate_desktop_assets.py  generate_traceability.py  test_desktop_ui.py  test_people_directory_design.py  test_prototype.py
site/: 404.html  index.html  robots.txt  site.webmanifest  sitemap.xml
spec/: feature-gates.yaml  implementation-plan.yaml  localization-requirements.json  requirements.json  traceability-ownership.json  traceability-report.json  uat-cases.json
tooling/xtask/: Cargo.toml
tooling/xtask/src/: main.rs
(+195 files in other folders)
