[workspace]
members = [
    "apps/cli",
    "adapters/backup-local",
    "adapters/object-store-local",
    "adapters/provider-registry-memory",
    "adapters/vault-markdown",
    "contexts/connections",
    "contexts/people",
    "contexts/profiles",
    "contexts/review-attention",
    "contexts/workspace",
    "crates/liaison-provider-sdk",
    "crates/liaison-shared-kernel",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/Electric-Town/liaison-RM"
rust-version = "1.97.1"

[workspace.dependencies]
assert_cmd = "2.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
predicates = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3.20"
thiserror = "2.0"
uuid = { version = "1.18", features = ["serde", "v7"] }
walkdir = "2.5"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
