[package]
name = "liaison-backup-local"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
liaison-workspace = { path = "../../contexts/workspace" }
serde_json.workspace = true
sha2.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
