[package]
name = "liaison-object-store-local"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
liaison-connections = { path = "../../contexts/connections" }

[dev-dependencies]
liaison-provider-sdk = { path = "../../crates/liaison-provider-sdk" }
tempfile.workspace = true

[lints]
workspace = true
