[package]
name = "liaison-relationship-yaml"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
liaison-relationships = { path = "../../contexts/relationships" }
liaison-shared-kernel = { path = "../../crates/liaison-shared-kernel" }
serde.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
