[package]
name = "liaison-vault-markdown"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
liaison-people = { path = "../../contexts/people" }
liaison-shared-kernel = { path = "../../crates/liaison-shared-kernel" }
liaison-workspace = { path = "../../contexts/workspace" }
serde.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tempfile.workspace = true
uuid.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
