[package]
name = "liaison-workspace-session-local"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cap-fs-ext.workspace = true
cap-std.workspace = true
liaison-workspace = { path = "../../contexts/workspace" }
serde_json.workspace = true

[dev-dependencies]
chrono.workspace = true
liaison-shared-kernel = { path = "../../crates/liaison-shared-kernel" }
tempfile.workspace = true
uuid.workspace = true

[lints]
workspace = true
