[package]
name = "liaison-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "liaison"
path = "src/main.rs"

[dependencies]
clap.workspace = true
liaison-application = { path = "../../crates/liaison-application" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
chrono.workspace = true
liaison-workspace = { path = "../../contexts/workspace" }
liaison-workspace-session-local = { path = "../../adapters/workspace-session-local" }
predicates.workspace = true
tempfile.workspace = true

[lints]
workspace = true
