[package]
name = "liaison-application"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
getrandom.workspace = true
liaison-people = { path = "../../contexts/people" }
liaison-shared-kernel = { path = "../liaison-shared-kernel" }
liaison-vault-markdown = { path = "../../adapters/vault-markdown" }
liaison-workspace = { path = "../../contexts/workspace" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
uuid.workspace = true

[lints]
workspace = true
