[package]
name = "liaison-provider-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
liaison-connections = { path = "../../contexts/connections" }
serde.workspace = true
uuid.workspace = true

[lints]
workspace = true
