[package]
name = "liaison-provider-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
liaison-connections = { path = "../../contexts/connections" }

[dev-dependencies]
wit-parser.workspace = true

[lints]
workspace = true
