[package]
name = "liaison-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
build = "build.rs"

[lib]
name = "liaison_desktop"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "liaison-rm"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
liaison-people = { path = "../../../contexts/people" }
liaison-vault-markdown = { path = "../../../adapters/vault-markdown" }
liaison-workspace = { path = "../../../contexts/workspace" }
serde.workspace = true
tauri = { version = "2", features = [] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
