[package]
name = "liaison-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
build = "build.rs"

[lib]
name = "liaison_desktop"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "liaison-rm"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
liaison-application = { path = "../../../crates/liaison-application" }
serde.workspace = true
tauri = { version = "2", features = [] }

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
